samples/_failures_safe/1761488484_c599b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07e95e75.c: In function ‘main’:
./samples/SAFE/__tmp_07e95e75.c:152:17: error: expected declaration or statement at end of input
  152 |                 }
      |                 ^
./samples/SAFE/__tmp_07e95e75.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_07e95e75.c:152:17: error: expected declaration or statement at end of input
